# FineTuningOnTelecomCluster

./: .gitignore  README.md  cluster_workflow.md  vllm_inference_test.md
benchmarking/: .gitignore  NAV4RAIL_BENCHMARK_PLAN.md  README.md  __init__.py  memory.md  pyproject.toml  requirements.txt
benchmarking/configs/: base.yaml
benchmarking/configs/methods/: all_constraints.yaml  gbnf.yaml  outlines.yaml  pot.yaml  react_agent.yaml  react_base_agent.yaml  react_pot_agent.yaml  sdpo.yaml  stage0.yaml
benchmarking/data/: real_inspection_mission.xml  safety_rules.yaml  skills_catalog.yaml  test_missions.json
benchmarking/docs/: APPROACHES_COMPARISON.md  LANGGRAPH_RUNTIME_GUIDE.md
benchmarking/runs/local/: bt_inventory_local_2026-04-26.md  bt_inventory_local_2026-04-27.md
benchmarking/scripts/: cluster_exec.sh  cluster_sync_pull.sh  cluster_sync_push.sh  fetch_skills.py  inventory_bt_corpus.py  vastai_instance.sh  vastai_run.sh
benchmarking/scripts/slurm/: _common.sh  array_models.sh  diagnose.sh  eval.sh  train.sh
benchmarking/src/agents/: __init__.py  base_agent.py  pot_agent.py  react_agent.py  react_base_agent.py  react_pot_agent.py  sandbox.py
benchmarking/src/builder/: __init__.py  api_docs.py  mission_builder.py
benchmarking/src/data/: build_stage0_corpus.py  generate_sft_dataset.py  generate_sft_train.py  prompt_builder.py  skills_loader.py
benchmarking/src/eval/: benchmark.py  bt_grammar.gbnf  bt_schema.py  build_grammar.py  constrained.py  metrics.py  validate_bt.py
benchmarking/src/reward/: reward_fn.py  rich_feedback.py
finetune/: bz2.py  (+33 more)
(+237 files in other folders)
